--- a/project1.css
+++ b/project1.css
@@ -1,1 +1,151 @@
-
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  background-color: #f0f2ff;
+  color: #333;
+  display: flex;             
+  flex-direction: column;     
+  min-height: 100%;          
+  margin: 0;
+}
+header {
+background-color: rgb(56,62,225);
+color: white;
+padding: 15px 0;
+box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+position: sticky;
+top: 0;
+z-index: 1000;
+display: flex;
+align-items: center;
+justify-content: space-around;
+}
+.logo {
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+.menu {
+  display: flex;
+  gap: 40px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.menu a {
+  text-decoration: none;
+  color: white;
+  font-size: 22px;
+  font-weight: 600;
+  position: relative;
+  transition: 0.3s ;
+}
+.menu a:hover,
+.menu a.active {
+  color: #ffda79;
+}
+  footer {
+  text-align: center;
+  padding: 20px 0;
+  color: #272626;
+  margin-top: auto;
+}
+footer ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+footer li {
+  margin: 8px 0;
+}
+.news-section {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 25px;
+  padding: 120px 60px 40px ;
+}
+.news {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  padding: 15px;
+  text-align: center;
+}
+.news img {
+  width: 100%;
+  border-radius: 10px;
+}
+.news h2 {
+  color: rgb(56,62,225);
+}
+.news p {
+  color: #555;
+}
+.about-section {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  padding: 120px 60px 60px ;
+}
+.about-section img {
+  width: 50% ;
+  border-radius: 15px ;
+}
+.about-text {
+  width: 50%;
+  font-size: 20px ;
+  line-height: 1.6 ;
+}
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 120px 20px ;
+}
+form {
+  background-color: white;
+  padding: 30px 40px;
+  border-radius: 15px ;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  width: 100%;
+  max-width: 500px ;
+  display: flex;
+  flex-direction: column;
+  gap: 15px ;
+}
+form input,
+form textarea,
+form button {
+  font-size: 18px ;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+form button {
+  background-color: rgb(56,62,225);
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px;
+  transition: 0.3s;
+}
+form button:hover {
+  border-color: #3b43d0;
+}
+@media(max-width:921px) {
+  .news-section {
+    grid-template-columns: repeat(2,1fr);
+  }
+  .about-section {
+    flex-direction: column;
+  }
+  .about-section img,
+  .about-text {
+    width: 100%;
+  }
+}
+@media(max-width:768px) {
+  .news-section {
+    grid-template-columns: 1fr;
+  }
+}
