--- a/project1.css
+++ b/project1.css
@@ -1,9 +1,11 @@
 body {
   font-family: "Segoe UI", Arial, sans-serif;
-  background-color: #f0f2ff;
+  /* background-color: #f0f2ff; */
   color: #333;
   display: flex;             
-  flex-direction: column;     
+  flex-direction: column;  
+  background-color: red;
+  background-image: conic-gradient(red, yellow, green, blue, black);
   min-height: 100%;          
   margin: 0;
 }
@@ -178,4 +180,24 @@ form button:hover {
   .news-section {
     grid-template-columns: 1fr;
   }
+}
+#pic {
+  width: 300px;
+  transition: 0.3s;
+}
+#pic:hover {
+  transform:rotate(45deg);
+}
+.animation {
+  width: 100px;
+  height: 50px;
+  background-color: red;
+  animation-name: myAnimation;
+  animation-duration: 3s;
+}
+@keyframes myAnimation {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
 }
